[package]
name = "loop-tunes"
version = "0.1.0"
authors = ["Bauke Conijn <bcmpinc@gmail.com>"]
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"
bevy = {version = "0.14", default-features = false, features = ["android_shared_stdcxx","bevy_asset","bevy_core_pipeline","bevy_sprite","bevy_text","bevy_winit","default_font","webgl2","x11"]}
rodio = { version = "0.19.0", default-features = false }
crossbeam-channel = "0.5.13"
bevy_embedded_assets = "0.11.0"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
